@@ -49,13 +49,13 @@ mob_status_def_rate: 100
 
 // Required luk to gain inmunity to status changes.
 // Luk increases resistance by closing the gap between natural resist and max 
-// linearly. This setting indicates required luk to gain complete inmunity.
+// linearly. This setting indicates required luk to gain complete immunity.
 // Eg: 40 vit -> 40% resist. 150 luk -> +50% of the missing gap. 
 //     So 40% + (50% of 60%) = 70%
 pc_luk_status_def: 300
 mob_luk_status_def: 300
 
-// Maximum resistance to status changes. (10000 = 100%)
+// Maximum resistance to status changes. (100 = 100%)
 // NOTE: Cards and equipment can go over this limit, so it only applies to natural resist.
-pc_max_status_def: 10000
-mob_max_status_def: 10000
+pc_max_status_def: 100
+mob_max_status_def: 100
